project deletion implemented with cascade, final tweakings etc