@@ -22,6 +22,7 @@ public class ProjectService {
 
     private final ProjectRepository projectRepository;
     private final ProjectMapper projectMapper;
+    private final ProjectDeletionService projectDeletionService;
 
     /**
      * Create a new project
@@ -59,7 +60,7 @@ public class ProjectService {
         log.info("Fetching all projects for user: {}", userId);
 
         List<Project> projects = projectRepository.findByUserId(userId);
-        return projects.stream().map(projectMapper::toDto).collect(Collectors.toList());
+        return projects.stream().map(projectMapper::toDto).toList();
     }
 
     /**
@@ -70,7 +71,7 @@ public class ProjectService {
         log.info("Fetching projects with status: {} for user: {}", status, userId);
 
         List<Project> projects = projectRepository.findByUserIdAndStatus(userId, status);
-        return projects.stream().map(projectMapper::toDto).collect(Collectors.toList());
+        return projects.stream().map(projectMapper::toDto).toList();
     }
 
     /**
@@ -81,7 +82,7 @@ public class ProjectService {
         log.info("Fetching starred projects for user: {}", userId);
 
         List<Project> projects = projectRepository.findStarredProjectsByUserId(userId);
-        return projects.stream().map(projectMapper::toDto).collect(Collectors.toList());
+        return projects.stream().map(projectMapper::toDto).toList();
     }
 
     /**
@@ -135,19 +136,15 @@ public class ProjectService {
     }
 
     /**
-     * Delete a project
+     * Delete a project and all its related data
      */
     public void deleteProject(UUID projectId, UUID userId) {
         log.info("Deleting project with ID: {} for user: {}", projectId, userId);
 
-        // Only project owners can delete projects
-        Project project = projectRepository
-                .findByIdAndUserId(projectId, userId)
-                .orElseThrow(() -> new RuntimeException("Project not found or access denied"));
+        // Use the comprehensive deletion service to delete project and all related data
+        projectDeletionService.deleteProjectCompletely(projectId, userId);
 
-        projectRepository.delete(project);
-
-        log.info("Project deleted successfully with ID: {}", projectId);
+        log.info("Project and all related data deleted successfully with ID: {}", projectId);
     }
 
     /**
@@ -156,8 +153,8 @@ public class ProjectService {
     public void updateProjectPaperCount(UUID projectId, int totalPapers) {
         log.info("Updating paper count for project: {} to: {}", projectId, totalPapers);
 
-        Project project =
-                projectRepository.findById(projectId).orElseThrow(() -> new RuntimeException("Project not found"));
+        Project project = projectRepository.findById(projectId)
+                .orElseThrow(() -> new RuntimeException("Project not found"));
 
         project.setTotalPapers(totalPapers);
         project.setLastActivity("Paper count updated");
@@ -170,8 +167,8 @@ public class ProjectService {
     public void updateProjectActiveTasksCount(UUID projectId, int activeTasks) {
         log.info("Updating active tasks count for project: {} to: {}", projectId, activeTasks);
 
-        Project project =
-                projectRepository.findById(projectId).orElseThrow(() -> new RuntimeException("Project not found"));
+        Project project = projectRepository.findById(projectId)
+                .orElseThrow(() -> new RuntimeException("Project not found"));
 
         project.setActiveTasks(activeTasks);
         project.setLastActivity("Active tasks updated");
